--- a/src/main/resources/META-INF/resources/list_render/product_tile.jspf
+++ b/src/main/resources/META-INF/resources/list_render/product_tile.jspf
@@ -1,3 +1,4 @@
+<%@ page import="com.liferay.portal.kernel.util.Validator" %>
 <c:choose>
     <c:when test="<%= themeDisplay.isSignedIn()%>">
         <div class="minium-product-tiles__item">
@@ -8,40 +9,84 @@
     </c:when>
     <c:otherwise>
 
-        <div class="minium-product-tiles__item">
-            <div class="minium-card product-card" data-href="<%= productFriendlyUrl %>>" data-onkeypress="_handleCardKeypress" id="ucsv" tabindex="0">
-                <div class="minium-card__compare">
-                    <label class="product-compare-checkbox">
-                        <input id="product-42594-compare-checkbox" class="product-compare-checkbox__input" type="checkbox" data-onchange="null">
-                    </label>
+        <div class="cp-renderer">
+            <liferay-util:dynamic-include key="com.liferay.commerce.product.content.web#/add_to_cart#pre" />
+
+            <div class="card d-flex flex-column product-card">
+                <div class="card-item-first position-relative">
+                    <a href="<%= productDetailURL %>">
+                        <liferay-adaptive-media:img
+                                class="img-fluid product-card-picture"
+                                fileVersion="<%= cpContentHelper.getCPDefinitionImageFileVersion(cpCatalogEntry.getCPDefinitionId(), request) %>"
+                        />
+
+                        <div class="aspect-ratio-item-bottom-left">
+                            <commerce-ui:availability-label
+                                    CPCatalogEntry="<%= cpCatalogEntry %>"
+                            />
+                        </div>
+                    </a>
                 </div>
-                <button data-onclick="null" class="minium-card__add-to-wishlist-button">
-                    <svg class="lexicon-icon lexicon-icon-heart" focusable="false" role="presentation" viewBox="0 0 512 512">
-                        <path d="M80.78 230.381l175.21 183.613 175.213-183.632c.112-.164.24-.314.355-.48 15.104-20.64 19.962-45.813 13.687-70.901-7.175-28.655-30.368-51.686-59.111-58.688-6.275-1.51-12.387-2.29-18.16-2.29-55.638 0-81.404 75.812-81.68 76.576-4.406 13.356-16.614 22.384-30.288 22.384h-.208c-13.769-.102-25.961-9.21-30.224-22.716-.192-.631-25.446-76.244-81.549-76.244-5.469 0-11.26.68-17.179 2.025-28.55 6.421-52.645 29.9-59.948 58.389-6.482 25.287-1.673 50.674 13.544 71.465.096.166.225.332.337.499zM255.99 480c-17.273 0-33.472-6.986-45.6-19.696L31.592 272.925a33.239 33.239 0 0 1-5.774-8.314C1.32 228.275-6.062 184.818 5.036 141.544c13.511-52.615 55.943-94.23 108.122-106.01C123.581 33.194 133.956 32 144.025 32c53.674 0 89.706 31.907 112.097 63.085C278.624 63.925 314.669 32 367.974 32c10.714 0 21.764 1.377 32.829 4.065 51.6 12.544 93.373 54.324 106.4 106.442 10.778 43.008 3.251 86.232-21.165 122.322a32.762 32.762 0 0 1-5.632 8.096L301.594 460.304C289.482 473.014 273.267 480 255.99 480z"></path>
-                    </svg>
-                    <svg class="lexicon-icon lexicon-icon-heart-full" focusable="false" role="presentation" viewBox="0 0 512 512">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M255.99 480c-17.273 0-33.472-6.986-45.6-19.696L31.592 272.925a33.239 33.239 0 0 1-5.774-8.314C1.32 228.275-6.062 184.818 5.036 141.544c13.511-52.615 55.943-94.23 108.122-106.01C123.581 33.194 133.956 32 144.025 32c53.674 0 89.706 31.907 112.097 63.085C278.624 63.925 314.669 32 367.974 32c10.714 0 21.764 1.377 32.829 4.065 51.6 12.544 93.373 54.324 106.4 106.442 10.778 43.008 3.251 86.232-21.165 122.322a32.762 32.762 0 0 1-5.632 8.096L301.594 460.304C289.482 473.014 273.267 480 255.99 480z"></path>
-                    </svg>
-                </button>
-                <a class="minium-card__picture"
-                   href="<%= productFriendlyUrl %>"
-                   style="background-image: url(<%= productDefaultImageUrl %>)" tabindex="-1">
-                </a>
-                <div class="minium-card__availability">
-                        <%--  TODO:  Fix this, it should not be hardcoded to good --%>
-                    <div class="commerce-dot commerce-dot--big commerce-dot--good"></div>
-                </div>
-                <p class="minium-card__sku">
-                    <%= (cpSku == null) ? StringPool.BLANK : HtmlUtil.escape(cpSku.getSku()) %>
-                </p>
-                <a class="minium-card__name" href="<%= productFriendlyUrl %>" tabindex="-1">
-                    <%= HtmlUtil.escape(cpCatalogEntry.getName()) %>
-                </a>
-                <p class="minium-card__description"></p>
-                <div class="mt-3 product-detail-actions">
-                    <a class="commerce-button commerce-button--outline" href="<%= signInUrl %> "><liferay-ui:message key="sign-in-for-pricing" /></a>
+
+                <div class="card-body d-flex flex-column justify-content-between py-2">
+                    <div class="cp-information">
+                        <p class="card-subtitle" title="<%= (cpSku == null) ? StringPool.BLANK : cpSku.getSku() %>">
+					<span class="text-truncate-inline">
+						<span class="text-truncate"><%= (cpSku == null) ? StringPool.BLANK : cpSku.getSku() %></span>
+					</span>
+                        </p>
+
+                        <p class="card-title" title="<%= cpCatalogEntry.getName() %>">
+                            <a href="<%= productDetailURL %>">
+						<span class="text-truncate-inline">
+							<span class="text-truncate"><%= cpCatalogEntry.getName() %></span>
+						</span>
+                            </a>
+                        </p>
+
+                        <p class="card-text">
+					<span class="text-truncate-inline">
+						<span class="d-flex flex-row text-truncate">
+							<commerce-ui:price
+                                    compact="<%= true %>"
+                                    CPCatalogEntry="<%= cpCatalogEntry %>"
+                            />
+						</span>
+					</span>
+                        </p>
+                    </div>
+
+                    <div>
+                        <div class="mt-3 product-detail-actions">
+                            <a class="commerce-button commerce-button--outline" href="<%= signInUrl %> "><liferay-ui:message key="sign-in-for-pricing" /></a>
+                        </div>
+                        <div class="autofit-float autofit-row autofit-row-center compare-wishlist">
+                            <div class="autofit-col autofit-col-expand compare-checkbox">
+                                <div class="autofit-section">
+                                    <div class="custom-checkbox custom-control custom-control-primary">
+                                        <div class="custom-checkbox custom-control">
+                                            <commerce-ui:compare-checkbox
+                                                    CPCatalogEntry="<%= cpCatalogEntry %>"
+                                                    label='<%= LanguageUtil.get(request, "compare") %>'
+                                            />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="autofit-col">
+                                <div class="autofit-section">
+                                    <commerce-ui:add-to-wish-list
+                                            CPCatalogEntry="<%= cpCatalogEntry %>"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <liferay-util:dynamic-include key="com.liferay.commerce.product.content.web#/add_to_cart#post" />
         </div>
 
     </c:otherwise>
